New name of the project.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Event Planner">
-    <title>Event Planner Application - v1.20</title>
+    <title>Event Planner</title>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <script src="bower_components/web-animations-js/web-animations.min.js"></script>
     <link rel="import" href="global-dependencies.html">
