--- a/global-dependencies.html
+++ b/global-dependencies.html
@@ -38,6 +38,7 @@
     <link rel="import" href="bower_components/iron-form/iron-form.html">
     <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
     <link rel="import" href="bower_components/paper-input/paper-textarea.html">
+    <link rel="import" href="bower_components/paper-date-picker/paper-date-picker.html">
 
     <!-- Polymer -->
     <link rel="import" href="components/event-toolbar.html">
