--- a/global-dependencies.html
+++ b/global-dependencies.html
@@ -6,6 +6,11 @@
     
     <!-- Bower -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <link rel="import" href="bower_components/l2t-paper-slider/l2t-paper-slider.html">
+    <link rel="import" href="slide-images-button.html">
+    <link rel="import" href="check-idle.html">
+
     <link rel="import" href="bower_components/paper-material/paper-material.html">
     <link rel="import" href="bower_components/note-app-elements/na-elements.html">
     <link rel="import" href="bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html">
