Google maps added.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       body {
         margin:0;
       }
+
     </style>
   </head>
   <body>
@@ -32,9 +33,10 @@
         database-url="https://event-planner-e6ee3.firebaseio.com">
      </firebase-app>
      
-     <main-app></main-app>
+     <main-app>
     <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtStNsFJnuTo2aG1-9mKf5T7OXEbchdpM&libraries=places&callback=initAutocomplete"-->
         <!--async defer></script>-->
+</main-app>
     <script src="sw-register.js"></script>
   </body>
 </html>
