--- a/global-dependencies.html
+++ b/global-dependencies.html
@@ -49,7 +49,6 @@
     <link rel="import" href="bower_components/google-map/google-map.html">
     <link rel="import" href="bower_components/geo-location/geo-location.html">
 
-
     <!-- Polymer -->
     <link rel="import" href="components/event-toolbar.html">
     <link rel="import" href="components/event-planner.html">
@@ -58,6 +57,7 @@
     <link rel="import" href="components/main-app.html">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="import" href="google-map.html">
+    <link rel="import" href="components/share-buttons.html">
     
     <!-- Firebase -->
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
