--- a/global-dependencies.html
+++ b/global-dependencies.html
@@ -6,8 +6,6 @@
     <!-- Web Components -->
       
     <!-- Bower -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
     <script type="text/javascript" src="components/js/custom.js"></script>
 
     <link rel="import" href="bower_components/l2t-paper-slider/l2t-paper-slider.html">
@@ -60,7 +58,7 @@
     <link rel="import" href="components/share-buttons.html">
     
     <!-- Firebase -->
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <!--<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>-->
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 
 
