--- a/global-dependencies.html
+++ b/global-dependencies.html
@@ -9,8 +9,8 @@
     <script type="text/javascript" src="components/js/custom.js"></script>
 
     <link rel="import" href="bower_components/l2t-paper-slider/l2t-paper-slider.html">
-    <link rel="import" href="slide-images-button.html">
-    <link rel="import" href="check-idle.html">
+    <link rel="import" href="components/slide-images-button.html">
+    <link rel="import" href="components/check-idle.html">
 
     <link rel="import" href="bower_components/paper-material/paper-material.html">
     <link rel="import" href="bower_components/note-app-elements/na-elements.html">
