--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="shortcut icon" type="image/png" href="components/img/calendar-favicon.png"/>
 
     <link rel="import" href="bower_components/l2t-paper-slider/l2t-paper-slider.html">
-    <link rel="import" href="slide-images-button.html">
-    <link rel="import" href="check-idle.html">
+    <link rel="import" href="components/slide-images-button.html">
+    <link rel="import" href="components/check-idle.html">
 
     <style>
       body {
